--- a/osa3/puhelinluettelo/package.json
+++ b/osa3/puhelinluettelo/package.json
@@ -13,11 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p3001 db.json",
-    "build:ui": "rm -rf build && npm run build --prod && cp -r build ../../../puhelinluettelo-backend/",
-    "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",    
-    "logs:prod": "heroku logs --tail"
+    "server": "json-server -p3001 db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
