--- a/osa5/bloglist-frontend/package.json
+++ b/osa5/bloglist-frontend/package.json
@@ -27,9 +27,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/react": "^8.0.1",
     "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "jest-dom": "^3.4.0",
-    "react-testing-library": "^8.0.1"
+    "jest-dom": "^3.4.0"
   }
 }
