--- a/osa7/bloglist-frontend/package.json
+++ b/osa7/bloglist-frontend/package.json
@@ -8,7 +8,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.3"
+    "react-redux": "^7.1.0",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
