--- a/osa7/bloglist-frontend/package.json
+++ b/osa7/bloglist-frontend/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +36,7 @@
   ],
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
+    "cypress": "^3.3.1",
     "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-react-hooks": "^1.6.0",
     "jest-dom": "^3.4.0"
